# lipl-display

./: .gitmodules  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  cross-cli.sh  cross-display-gtk.sh  cross.sh  object_manager.rs  publish_crates_io.sh
.github/workflows/: release.yml  rust-clippy.yml  rust.yml
crates/json-lines/: Cargo.toml
crates/json-lines/src/: lib.rs
crates/lipl-display-blitz/: Cargo.toml
crates/lipl-display-blitz/assets/: styles.css
crates/lipl-display-blitz/src/: app.rs  args.rs  constant.rs  main.rs  multi_line.rs  status.rs  store.rs  styles.css
crates/lipl-display-common/: Cargo.toml  README.md
crates/lipl-display-common/src/: error.rs  lib.rs
crates/lipl-display-egui/: Cargo.toml  README.md
crates/lipl-display-egui/src/: fonts.rs  lipl_display.rs  main.rs  style.rs  visuals.rs
crates/lipl-display-femtovg/: Cargo.toml  README.md  build.rs
crates/lipl-display-femtovg/src/: gatt_client.rs  helpers.rs  main.rs
crates/lipl-display-freya/: Cargo.toml
crates/lipl-display-freya/src/: constant.rs  font_size.rs  main.rs  part.rs  status.rs  theme.rs
crates/lipl-display-gpui/: Cargo.toml
crates/lipl-display-gpui/src/: constant.rs  lipl_screen.rs  listen_bluer.rs  main.rs
crates/lipl-display-gtk/: Cargo.toml  README.md
crates/lipl-display-gtk/src/: cursor.rs  main.rs
crates/lipl-display-gtk/src/css/: light.css  mod.rs
crates/lipl-display-gtk/src/window/: mod.rs  window.gtk4.ui  window.ui
crates/lipl-display-sdl2/: Cargo.toml
crates/lipl-display-sdl2/src/: main.rs
crates/lipl-display-slint/: Cargo.toml  README.md
crates/lipl-display-slint/.cargo/: config.toml
crates/lipl-display-slint/pkg/common/: lipl-display-slint.lipl.service  lipl.toml
crates/lipl-display-slint/pkg/debian/: preinst
crates/lipl-display-slint/src/: configuration.rs  constant.rs  handle_message.rs  main.rs
crates/lipl-display-slint/ui/: main.slint
crates/lipl-display-xilem/: Cargo.toml
crates/lipl-display-xilem/src/: main.rs
crates/lipl-gatt-bluer/: Cargo.toml  README.md
crates/lipl-gatt-bluer-cli/: Cargo.toml
crates/lipl-gatt-bluer-cli/src/: error.rs  main.rs  out.rs  param.rs  signal.rs
crates/lipl-gatt-bluer/examples/: 01.rs  newline.rs  trace_messages.rs
crates/lipl-gatt-bluer/src/: characteristic.rs  error.rs  lib.rs
crates/lipl-gatt-zbus/: Cargo.toml  characteristic.rs
crates/lipl-gatt-zbus/examples/: client.rs  print_messages.rs
crates/lipl-gatt-zbus/src/: advertisement.rs  connection_extension.rs  error.rs  gatt_application.rs  lib.rs  message_handler.rs  object_path_extensions.rs  peripheral.rs
crates/lipl-gatt-zbus/src/gatt/: application.rs  characteristic.rs  mod.rs  service.rs
crates/lipl-gatt-zbus/src/proxy/: adapter.rs  device.rs  gatt_manager.rs  le_advertising_manager.rs  mod.rs
crates/login-poweroff-reboot/: Cargo.toml  README.md
crates/login-poweroff-reboot-zbus/: Cargo.toml
crates/login-poweroff-reboot-zbus/src/: lib.rs  login_manager.rs
crates/login-poweroff-reboot/examples/: poweroff.rs
crates/login-poweroff-reboot/src/: lib.rs  login.rs
examples/: 01.rs  client.rs  lipl-gatt-bluer-cli.rs  server.rs
src/: adapter_interfaces.rs  advertisement.rs  characteristic.rs  connection_extension.rs  constant.rs  cursor.rs  device.rs  error.rs  gatt_application.rs  lib.rs  lipl_display.rs  login.rs  login_manager.rs  main.rs  message.rs  message_handler.rs  object_path_extensions.rs  visuals.rs
src/css/: dark.css  mod.rs
src/gatt/: application.rs  characteristic.rs  mod.rs  service.rs
src/proxy/: adapter.rs  device.rs  gatt_manager.rs  le_advertising_manager.rs  mod.rs
src/window/: mod.rs
