[workspace]
members = [
    "crates/lipl-display-common",
    "crates/lipl-display-egui",
    "crates/lipl-display-femtovg",
    "crates/lipl-display-gtk",
    "crates/lipl-gatt-bluer",
    "crates/login-poweroff-reboot"
]
resolver = "2"

[workspace.package]
authors = ["Paul Min"]
edition = "2021"
homepage = "https://paulusminus.github.io/lipl-book/"
license = "MIT"
repository = "https://github.com/paulusminus/lipl-display/"
version = "0.3.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
