[workspace]
members = [
    "crates/lipl-display-common",
    "crates/lipl-display-egui",
    "crates/lipl-display-femtovg",
    "crates/lipl-display-gtk",
    "crates/lipl-display-slint",
    "crates/lipl-gatt-bluer",
    "crates/lipl-gatt-bluer-cli",
    "crates/lipl-gatt-zbus",
    "crates/login-poweroff-reboot",
]
resolver = "3"

[workspace.package]
authors = ["Paul Min"]
edition = "2024"
homepage = "https://www.paulmin.nl/lipl.html"
license = "MIT"
repository = "https://github.com/paulusminus/lipl-display/"
version = "0.4.7"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
