[package]
name = "json-lines"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true}
tokio = { workspace = true, features = ["fs"] }
tokio-stream = { workspace = true, features = ["io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
