[package]
name = "lipl-display-blitz"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
chrono = { workspace = true }
dioxus = { workspace = true }
dioxus-native-blitz = { workspace = true }
futures-util = { workspace = true }
json-lines = { workspace = true }
lipl-display-common = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
tracing-subscriber = { workspace = true }
