[package]
authors.workspace = true
edition.workspace = true
name = "lipl-display-blitz"
version = "0.1.0"
repository.workspace = true
license.workspace = true
publish = false

[features]
fullscreen = []

[dependencies]
chrono = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
dioxus = { workspace = true }
dioxus-native-blitz = { workspace = true }
futures-util = { workspace = true }
json-lines = { workspace = true }
lipl-display-common = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
tracing-subscriber = { workspace = true }
winit = { version = "=0.31.0-beta.2" }
