[package]
authors.workspace = true
description = "Models for Lipl Display"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-display-common"
repository.workspace = true
version = "0.4.6"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.8"
uuid = "1.12.1"
