[package]
authors.workspace = true
description = "Models for Lipl Display"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-display-common"
repository.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true }
