[package]
authors.workspace = true
description = "Displaying part on the screen using egui"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-display-egui"
repository.workspace = true
version = "0.4.5"

[dependencies]
anyhow = "1"
eframe = { version = "0.28", default-features = false, features = ["glow"] }
lipl-display-common = { version = "0.4", path = "../lipl-display-common" }
lipl-gatt-bluer = { version = "0.4", path = "../lipl-gatt-bluer" }
log = "0.4"
env_logger = "0.11"
