[package]
authors.workspace = true
description = "Displaying part on the screen using egui"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-display-egui"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
eframe = { workspace = true }
lipl-display-common = { workspace = true }
lipl-gatt-bluer = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
