[package]
name = "lipl-display-femtovg"
authors.workspace = true
build = "build.rs"
description = "Displaying part on the screen using femtovg"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
femtovg = { version = "0.15.0", default-features = false }
glutin = { version = "0.32.2", default-features = false }
glutin-winit = { version = "0.5.0", default-features = false, features = [
    "egl",
    "wayland",
] }
lipl-display-common = { version = "0.4.6", path = "../lipl-display-common" }
lipl-gatt-bluer = { version = "0.4", path = "../lipl-gatt-bluer" }
log = "0.4.25"
env_logger = "0.11.6"
winit = { version = "0.30.5", default-features = false, features = [
    "rwh_06",
    "wayland",
    "wayland-dlopen",
    "wayland-csd-adwaita",
] }

[build-dependencies]
gl_generator = "0.14.0"
