[package]
name = "lipl-display-femtovg"
authors.workspace = true
description = "Displaying part on the screen using femtovg"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
femtovg = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true, features = [
    "egl",
    "wayland",
] }
lipl-display-common = { workspace = true }
lipl-gatt-bluer = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
winit = { workspace = true, features = [
    "rwh_06",
    "wayland",
] }
