[package]
name = "lipl-display-freya"
version = "0.1.0"
edition = "2024"

[features]
default = []
fake = []

[dependencies]
freya = "0.3.4"
futures-util = "0.3.31"
lipl-display-common = "0.4.6"
lipl-gatt-bluer = "0.4.6"
tokio = { version = "1.45.1", features = ["time"] }
json-lines = { path = "../json-lines" }
