[package]
name = "lipl-display-freya"
version = "0.1.0"
edition = "2024"

[features]
default = []
fake = []

[dependencies]
freya = { workspace = true }
futures-util = { workspace = true }
lipl-display-common = { workspace = true }
lipl-gatt-bluer = { workspace = true }
tokio = { workspace = true, features = ["time"] }
json-lines = { workspace = true }
