[package]
authors.workspace = true
description = "Displaying part on the screen using gpui"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-display-gpui"
repository.workspace = true
version = "0.1.1"

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
gpui = { workspace = true }
gpui_linux = { workspace = true }
gpui_tokio = { workspace = true }
lipl-display-common = { workspace = true }
lipl-gatt-bluer = { workspace = true }
log = { workspace = true }
