[package]
authors.workspace = true
description = "Displaying part on the screen using gtk"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-display-gtk"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.93"
gtk4 = "0.10.0"
glib = { version = "0.21.0", features = ["log"] }
lipl-display-common = { version = "0.4", path = "../lipl-display-common" }
lipl-gatt-bluer = { version = "0.4", path = "../lipl-gatt-bluer" }
log = "0.4.27"
async-channel = "2.5.0"
