[package]
authors.workspace = true
description = "Displaying part on the screen using gtk"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-display-gtk"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
gtk4 = { workspace = true }
glib = { workspace = true }
lipl-display-common = { workspace = true }
lipl-gatt-bluer = { workspace = true }
log = { workspace = true }
async-channel = { workspace = true }
