[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-display-sdl2"
repository.workspace = true
version.workspace = true

[dependencies]
futures = "0.3"
sdl2 = { version = "0.35", features = ["ttf"] }
lipl-display-common = "0.4"
lipl-gatt-bluer = "0.4"
