[package]
name = "lipl-display-slint"
authors.workspace = true
description = "Displaying part on the screen using slint"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.2"
build = "build.rs"

[dependencies]
slint = { workspace = true, features = [
  "std",
  "compat-1-2",
  "renderer-femtovg",
  "backend-linuxkms",
] }
# slint = { version = "1.6", default-features = false, features = ["std", "compat-1-2", "backend-qt"] }
lipl-display-common = { workspace = true }
lipl-gatt-bluer = { workspace = true }
login-poweroff-reboot = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry"] }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }

[package.metadata.deb]
priority = "optional"
section = "misc"
depends = "libinput10, seatd, libgbm1, libxkbcommon0, libegl1, libfontconfig1, passwd"
maintainer-scripts = "pkg/debian/"
assets = [
  [
    "../../target/aarch64-unknown-linux-gnu/release/lipl-display-slint",
    "/usr/bin/",
    "755",
  ],
  [
    "pkg/common/lipl.toml",
    "/etc/",
    "664",
  ],
]
systemd-units = [
  { unit-name = "lipl", unit-scripts = "pkg/common", enable = false },
]
conf-files = ["/etc/lipl.toml"]
