[package]
name = "lipl-display-xilem"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { workspace = true }
json-lines = { workspace = true }
lipl-display-common = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
xilem = { workspace = true }
