[package]
name = "lipl-gatt-bluer-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
futures-util = "0.3.30"
lipl-display-common = { version = "0.4", path = "../lipl-display-common" }
lipl-gatt-bluer = { version = "0.4", path = "../lipl-gatt-bluer" }
login-poweroff-reboot = { version = "0.4", path = "../login-poweroff-reboot" }
log = "0.4.21"
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.2", features = ["derive"] }
