[package]
name = "lipl-gatt-bluer-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
futures-util = "0.3.31"
lipl-display-common = { version = "0.4.6", path = "../lipl-display-common" }
lipl-gatt-bluer = { version = "0.4", path = "../lipl-gatt-bluer" }
login-poweroff-reboot = { version = "0.4", path = "../login-poweroff-reboot" }
log = "0.4.22"
serde_json = "1.0.133"
thiserror = "2.0.8"
tokio = { version = "1.49.0", features = [
  "io-util",
  "io-std",
  "rt",
  "macros",
  "signal",
] }
serde = { version = "1.0.216", features = ["derive"] }
tokio-stream = { version = "0.1.17", features = ["signal"] }
