[package]
name = "lipl-gatt-bluer-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
futures-util = { workspace = true }
lipl-display-common = { workspace = true }
lipl-gatt-bluer = { workspace = true }
login-poweroff-reboot = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "io-util",
  "io-std",
  "rt",
  "macros",
  "signal",
] }
serde = { workspace = true, features = ["derive"] }
tokio-stream = { workspace = true, features = ["signal"] }
