[package]
authors.workspace = true
description = "Receiving Gatt Characteristics writes"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-gatt-bluer"
repository.workspace = true
version.workspace = true

[dependencies]
bluer = { workspace = true }
futures-util = { workspace = true }
futures-channel = { workspace = true }
lipl-display-common = { workspace = true }
pin-project = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
log = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
env_logger = { workspace = true }
