[package]
authors.workspace = true
description = "Receiving Gatt Characteristics writes"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-gatt-zbus"
repository.workspace = true
version.workspace = true

[dependencies]
derive_builder = "0.20.2"
futures = "0.3.31"
lipl-display-common = { path = "../lipl-display-common" }
pin-project = "1.1.10"
thiserror = "2.0.12"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.41"
uuid = "1.17.0"
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
