[package]
authors.workspace = true
description = "Receiving Gatt Characteristics writes"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-gatt-zbus"
repository.workspace = true
version.workspace = true

[dependencies]
derive_builder = { workspace = true }
futures = { workspace = true }
lipl-display-common = { workspace = true }
pin-project = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tracing = { workspace = true }
uuid = { workspace = true }
zbus = { workspace = true, features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
