[package]
authors.workspace = true
description = "reboot or poweroff machine by sending dbus message to login manager"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "login-poweroff-reboot-zbus"
repository.workspace = true
version = "0.4.0"

[dependencies]
zbus = "3"
