[package]
authors.workspace = true
description = "Poweroff or reboot machine using dbus interface logind"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "login-poweroff-reboot"
repository.workspace = true
version = "0.4.5"

[dependencies]
dbus = "0.9.7"
strum = { version = "0.26.3", features = ["derive"] }
