[package]
authors.workspace = true
description = "Poweroff or reboot machine using dbus interface logind"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "login-poweroff-reboot"
repository.workspace = true
version.workspace = true

[dependencies]
dbus = "0.9.7"
strum = { version = "0.27.0", features = ["derive"] }
